--- a/mercedes.html
+++ b/mercedes.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="da">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="mercedes.html" />
     <title></title>
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <h1>Mercedes</h1>
-
-</body>
-
+    <img class="mercedes" src="images/Mercedes-Benz_Star_2022.svg.png" alt="mercedes logo" />
+  </body>
 </html>
