--- a/volkswagen.html
+++ b/volkswagen.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="da">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+  </head>
 
-
-</head>
-
-<body>
-    <h1>VolksWagen</h1>
-
-</body>
-
+  <body>
+    <header>VOLKSWAGEN</header>
+    <main>
+      <h1>VolksWagen</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo amet, veritatis cupiditate qui omnis non esse atque, ipsum voluptatibus maiores ad odio tempore dolor neque?></p>
+    </main>
+    <footer></footer>
+  </body>
 </html>
