--- a/citroen.html
+++ b/citroen.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="da">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ZITRON</title>
+    <link rel="stylesheet" href="styles/citroen.css" />
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-
-
-</head>
-
-<body>
-    <h1>Citroen</h1>
-
-
-</body>
-
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Frugt</li>
+          <li>Krydderi</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Citroen</h1>
+      <h2>Se nedenstående for info om den fermøse Zitron</h2>
+      <p>Mi bah, zu zu zu, zu zu zu</p>
+      <p>Mi bah, i gat kuz, miaw miaw miaw</p>
+      <p>MI BAHHHHHHHHHH</p>
+    </main>
+  </body>
 </html>
